# palette-picker

./: CMakeLists.txt
src/: main.cpp  main.hpp  menu.cpp  menu.hpp  palette-list.cpp  palette-list.hpp  reader.cpp
